frontend/src/app/admin/reservation-override/reservation-override.css
main {
    padding: 35px;

    position: absolute;
    top: 90px;
    right: 0;
    bottom: 0;
    left: 0;
    background-color:blue;
}

.form-box {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;

    .form {
        width: 500px;
        height: 460px;
        background-color: whitesmoke;
        margin-top: 25px;
        border-radius: 5px;
        overflow: hidden;

        display: flex;
        flex-direction: column;
        
        & header {
            padding-left: 20px;
            position: sticky;
            top: 0;
        }
    }
    
    .content {
        box-sizing: border-box;
        padding: 20px;
        overflow-x: hidden;
        overflow-y: auto;
        width: inherit;
        flex: 1;
        min-height: 0;
        scrollbar-width: thin;

        display: flex;
        flex-direction: column;

        &.reserve {
            gap: 30px;
            & .row {
                display: flex;
                flex-direction: row;
                justify-content: space-between;

                & label {
                    display: inline-flex;
                    flex-direction: row;

                    gap: 20px;

                    & .r {
                        display: flex;
                        flex-direction: column;
                    }
                }

                & .route {
                    display: flex;
                    flex-direction: row;
                    justify-content: space-between;
                    gap: 50px;
                }
            }
            
        }

        &.reason {
            flex: 1;
            align-items: center;
            gap: 30px;

            & textarea {
                margin-top: 50px;
                width: 300px;
                height: 100px;
                resize: none;

                border-radius: 3px;

                &:invalid {
                    border: 3px solid red;
                }

                &:valid {
                    border: 3px solid var(--primary-color);
                }
            }

            & button {
                font-family: var(--body-font);
                font-weight: bold;
                font-size: 0.9rem;
                width: 80px;
                height: 30px;
                border: 2px solid var(--primary-color);
                border-radius: 5px;
                cursor: pointer;

                transition: background-color 400ms, transform 400ms;

                &:hover {
                    background-color: rgb(216, 216, 216);
                }

                &:active {
                    transform: scale(0.90);
                }
            }
        }

    }
}

